--- a/src/style.scss
+++ b/src/style.scss
@@ -7,18 +7,21 @@
     font-style: normal;
     font-size: large;
     padding: 0 60px;
-    margin: 10px;
+    margin: 0px;
     border: 0;
     border-radius: 0.2rem;
     background-color: #8ACFE5;
-    height: 4rem;
+    height: 3.5rem;
+    width: 17rem;
 
     &:nth-child(2) {
       @media screen and (min-width: 800px) {
         background-color: #E3170A;
         color: #ffffff;
         text-decoration: none;
+        margin-right: 1rem;
       }
+
       background-color: white;
       color: #36769D;
       font-size: 0.9rem;
@@ -49,6 +52,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  @include roboto-regular;
 }
 
 
@@ -59,7 +63,7 @@
   grid-template-columns: repeat(6, 1fr);
   height: 100%;
   width: 100%;
-  
+
 }
 
 .header {
@@ -70,16 +74,24 @@
   .logo-container {
     display: flex;
     align-items: center;
+    margin-bottom: 2rem;
+    margin: 2rem 0 2rem 2rem;
 
     h1 {
+      @media screen and (min-width: 800px) {
+        font-size: 2rem;
+      }
+
       color: #fff;
       font-size: 1.5rem;
       @include roboto-bold;
+      margin-left: 1rem;
 
       span {
         @media screen and (min-width: 800px) {
           display: inline;
         }
+
         display: flex;
       }
     }
@@ -87,20 +99,30 @@
     .logo {
       height: 100px;
       width: 150px;
-      margin: 30px 0 0 30px;
     }
   }
 
   nav {
     @media screen and (min-width: 800px) {
-    display: block;
+      display: block;
     }
+
     display: none;
+    margin-bottom: 1.5rem;
+
 
     ul {
       display: flex;
       justify-content: space-evenly;
       list-style: none;
+      margin: 0 6rem 0 6rem;
+
+      a {
+        color: #ffffff;
+        list-style: none;
+        font-size: 1.2rem;
+        text-decoration: none;
+      }
     }
   }
 }
@@ -123,12 +145,14 @@
     justify-content: center;
     grid-row: 5 / 7;
     z-index: 10;
-    }
+  }
+
   grid-row: 6 / 7;
   grid-column: 1 / 7;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 2rem 0 2.5rem 0;
 
   @include button-group;
 }
@@ -139,6 +163,7 @@
   background-color: #FFF;
   display: flex;
   align-items: center;
+  margin-bottom: 3rem;
 
   img {
     float: left;
@@ -148,8 +173,8 @@
   }
 
   .review-text {
+
     span {
-      @include roboto-regular;
       font-size: 1.3rem;
       padding: 0 25px 0 0;
     }
@@ -163,12 +188,13 @@
   }
 }
 
-h1 {
+.rooms-titel {
   grid-row: 10 / 11;
   grid-column: 1 / 7;
   text-align: center;
   font-weight: 200;
-  margin: 30px 10px 0 10px;
+  margin-bottom: 2rem;
+  @include roboto-bold;
 
 }
 
@@ -183,7 +209,7 @@ h1 {
     min-width: 300px;
     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
     height: 400px;
-    margin: 0 20px;
+    margin: 0 1rem 2.5rem 0;
     border-radius: 0.3rem;
 
     img {
@@ -194,8 +220,8 @@ h1 {
     }
 
     h2 {
-      @include roboto-regular;
-      padding-left: 10px;
+      margin: 0 0 0 0.5rem;
+      text-align: left;
     }
 
     .rating {
@@ -209,7 +235,6 @@ h1 {
     }
 
     .participants {
-      @include roboto-regular;
       display: flex;
       padding-left: 1rem;
       padding-bottom: 15px;
@@ -217,7 +242,6 @@ h1 {
     }
 
     p {
-      @include roboto-regular;
       white-space: normal;
       padding: 0px 15px 10px 15px;
     }
@@ -225,12 +249,11 @@ h1 {
     button {
       color: #fff;
       padding: 0 30px;
-      margin: 5px 0 0 128px;
+      margin: 1.2rem 0 0 8rem;
       border: none;
       border-radius: 0.2rem;
       background-color: #E3170A;
       height: 2.2rem;
-      @include roboto-bold;
       cursor: pointer;
     }
   }
@@ -240,13 +263,14 @@ h1 {
   @media screen and (min-width: 800px) {
     flex-direction: row-reverse;
     justify-content: center;
-    }
+  }
 
   grid-row: 15 / 17;
   grid-column: 1 / 7;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2rem;
 
   @include button-group;
 }
@@ -259,8 +283,6 @@ h1 {
   text-align: center;
 
   p {
-    margin-top: 50px;
-    @include roboto-regular;
     padding: 60px 30px 0px 30px;
     font-size: 1.4rem;
   }
@@ -274,14 +296,15 @@ h1 {
     @include roboto-bold;
     font-size: 1.4rem;
     cursor: pointer;
+    margin-bottom: 4rem;
   }
 }
 
 .collage-image-one {
   @media screen and (min-width: 800px) {
-      grid-row: 21 / 23;
-      grid-column: 1 / 4;
-    }
+    grid-row: 21 / 23;
+    grid-column: 1 / 4;
+  }
 
   grid-row: 21 / 23;
   grid-column: 1 / 7;
@@ -302,14 +325,16 @@ h1 {
   grid-row: 23 / 26;
   grid-column: 1 / 7;
   background-color: #FFF;
-  text-align: center;
+  text-align: start;
+  margin: 1.5rem 0 2rem 0;
 
   h2 {
-    margin: 20px 0;
+    margin: 0 0 1rem 1rem;
+    text-align: start;
   }
 
   p {
-    padding: 0 30px;
+    margin: 0 0 0 1rem;
   }
 
   button {
@@ -320,7 +345,8 @@ h1 {
     border-radius: 0.2rem;
     background-color: #ff0000;
     height: 2.2rem;
-    cursor: pointer;
+    margin: 2rem 0 0 1.5rem;
+    text-align: left;
   }
 }
 
@@ -346,17 +372,19 @@ h1 {
     grid-column: 1 / 4;
   }
 
-  grid-row: 33 / 35;
+  grid-row: 31 / 33;
   grid-column: 1 / 7;
   background-color: #FFF;
-  text-align: center;
+  text-align: start;
+  margin: 1.5rem 0 2rem 0;
 
   h2 {
-    margin: 20px 0;
+    margin: 0 0 1rem 1rem;
+    text-align: start;
   }
 
   p {
-    padding: 0 30px;
+    margin: 0 0 0 1rem;
   }
 
   button {
@@ -367,22 +395,25 @@ h1 {
     border-radius: 0.2rem;
     background-color: #ff0000;
     height: 2.2rem;
-    cursor: pointer;
+    margin: 2rem 0 0 1.5rem;
+    text-align: left;
   }
 }
 
 .footer {
-  grid-row: 35 / 36;
+  grid-row: 33 / 36;
   grid-column: 1 / 7;
   background-color: #011827;
   color: #FFF;
-  text-align: center;
+  text-align: start;
 
   h2 {
-    margin: 20px 0;
+    margin: 0;
+    padding: 1rem 0.5rem 0 1rem;
+    text-align: start;
   }
 
   p {
-    padding: 0 30px;
+    padding: 0 0.5rem 0 1rem;
   }
 }
