--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .container {
@@ -20,6 +23,8 @@
 .header .logo-container {
   display: flex;
   align-items: center;
+  margin-bottom: 2rem;
+  margin: 2rem 0 2rem 2rem;
 }
 .header .logo-container h1 {
   color: #fff;
@@ -27,6 +32,12 @@
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: normal;
+  margin-left: 1rem;
+}
+@media screen and (min-width: 800px) {
+  .header .logo-container h1 {
+    font-size: 2rem;
+  }
 }
 .header .logo-container h1 span {
   display: flex;
@@ -39,10 +50,10 @@
 .header .logo-container .logo {
   height: 100px;
   width: 150px;
-  margin: 30px 0 0 30px;
 }
 .header nav {
   display: none;
+  margin-bottom: 1.5rem;
 }
 @media screen and (min-width: 800px) {
   .header nav {
@@ -53,6 +64,13 @@
   display: flex;
   justify-content: space-evenly;
   list-style: none;
+  margin: 0 6rem 0 6rem;
+}
+.header nav ul a {
+  color: #ffffff;
+  list-style: none;
+  font-size: 1.2rem;
+  text-decoration: none;
 }
 
 .header-image {
@@ -72,6 +90,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 2rem 0 2.5rem 0;
 }
 @media screen and (min-width: 800px) {
   .button-group {
@@ -88,11 +107,12 @@
   font-style: normal;
   font-size: large;
   padding: 0 60px;
-  margin: 10px;
+  margin: 0px;
   border: 0;
   border-radius: 0.2rem;
   background-color: #8ACFE5;
-  height: 4rem;
+  height: 3.5rem;
+  width: 17rem;
 }
 .button-group button:nth-child(2) {
   background-color: white;
@@ -105,6 +125,7 @@
     background-color: #E3170A;
     color: #ffffff;
     text-decoration: none;
+    margin-right: 1rem;
   }
 }
 
@@ -114,6 +135,7 @@
   background-color: #FFF;
   display: flex;
   align-items: center;
+  margin-bottom: 3rem;
 }
 .review img {
   float: left;
@@ -122,9 +144,6 @@
   width: 64px;
 }
 .review .review-text span {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   font-size: 1.3rem;
   padding: 0 25px 0 0;
 }
@@ -136,12 +155,15 @@
   font-size: 1.2rem;
 }
 
-h1 {
+.rooms-titel {
   grid-row: 10/11;
   grid-column: 1/7;
   text-align: center;
   font-weight: 200;
-  margin: 30px 10px 0 10px;
+  margin-bottom: 2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .popular-rooms {
@@ -155,7 +177,7 @@ h1 {
   min-width: 300px;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
   height: 400px;
-  margin: 0 20px;
+  margin: 0 1rem 2.5rem 0;
   border-radius: 0.3rem;
 }
 .popular-rooms .room img {
@@ -165,10 +187,8 @@ h1 {
   border-top-right-radius: 0.3rem;
 }
 .popular-rooms .room h2 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  padding-left: 10px;
+  margin: 0 0 0 0.5rem;
+  text-align: left;
 }
 .popular-rooms .room .rating {
   float: left;
@@ -179,32 +199,23 @@ h1 {
   width: 16px;
 }
 .popular-rooms .room .participants {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   display: flex;
   padding-left: 1rem;
   padding-bottom: 15px;
   font-size: 0.9rem;
 }
 .popular-rooms .room p {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   white-space: normal;
   padding: 0px 15px 10px 15px;
 }
 .popular-rooms .room button {
   color: #fff;
   padding: 0 30px;
-  margin: 5px 0 0 128px;
+  margin: 1.2rem 0 0 8rem;
   border: none;
   border-radius: 0.2rem;
   background-color: #E3170A;
   height: 2.2rem;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-style: normal;
   cursor: pointer;
 }
 
@@ -214,6 +225,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2rem;
 }
 @media screen and (min-width: 800px) {
   .button-group-two {
@@ -228,11 +240,12 @@ h1 {
   font-style: normal;
   font-size: large;
   padding: 0 60px;
-  margin: 10px;
+  margin: 0px;
   border: 0;
   border-radius: 0.2rem;
   background-color: #8ACFE5;
-  height: 4rem;
+  height: 3.5rem;
+  width: 17rem;
 }
 .button-group-two button:nth-child(2) {
   background-color: white;
@@ -245,6 +258,7 @@ h1 {
     background-color: #E3170A;
     color: #ffffff;
     text-decoration: none;
+    margin-right: 1rem;
   }
 }
 
@@ -256,10 +270,6 @@ h1 {
   text-align: center;
 }
 .mini-footer p {
-  margin-top: 50px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   padding: 60px 30px 0px 30px;
   font-size: 1.4rem;
 }
@@ -274,6 +284,7 @@ h1 {
   font-style: normal;
   font-size: 1.4rem;
   cursor: pointer;
+  margin-bottom: 4rem;
 }
 
 .collage-image-one {
@@ -296,7 +307,8 @@ h1 {
   grid-row: 23/26;
   grid-column: 1/7;
   background-color: #FFF;
-  text-align: center;
+  text-align: start;
+  margin: 1.5rem 0 2rem 0;
 }
 @media screen and (min-width: 800px) {
   .collage-text-one {
@@ -305,10 +317,11 @@ h1 {
   }
 }
 .collage-text-one h2 {
-  margin: 20px 0;
+  margin: 0 0 1rem 1rem;
+  text-align: start;
 }
 .collage-text-one p {
-  padding: 0 30px;
+  margin: 0 0 0 1rem;
 }
 .collage-text-one button {
   color: #fff;
@@ -318,7 +331,8 @@ h1 {
   border-radius: 0.2rem;
   background-color: #ff0000;
   height: 2.2rem;
-  cursor: pointer;
+  margin: 2rem 0 0 1.5rem;
+  text-align: left;
 }
 
 .collage-image-two {
@@ -338,10 +352,11 @@ h1 {
 }
 
 .collage-text-two {
-  grid-row: 33/35;
+  grid-row: 31/33;
   grid-column: 1/7;
   background-color: #FFF;
-  text-align: center;
+  text-align: start;
+  margin: 1.5rem 0 2rem 0;
 }
 @media screen and (min-width: 800px) {
   .collage-text-two {
@@ -350,10 +365,11 @@ h1 {
   }
 }
 .collage-text-two h2 {
-  margin: 20px 0;
+  margin: 0 0 1rem 1rem;
+  text-align: start;
 }
 .collage-text-two p {
-  padding: 0 30px;
+  margin: 0 0 0 1rem;
 }
 .collage-text-two button {
   color: #fff;
@@ -363,21 +379,24 @@ h1 {
   border-radius: 0.2rem;
   background-color: #ff0000;
   height: 2.2rem;
-  cursor: pointer;
+  margin: 2rem 0 0 1.5rem;
+  text-align: left;
 }
 
 .footer {
-  grid-row: 35/36;
+  grid-row: 33/36;
   grid-column: 1/7;
   background-color: #011827;
   color: #FFF;
-  text-align: center;
+  text-align: start;
 }
 .footer h2 {
-  margin: 20px 0;
+  margin: 0;
+  padding: 1rem 0.5rem 0 1rem;
+  text-align: start;
 }
 .footer p {
-  padding: 0 30px;
+  padding: 0 0.5rem 0 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
