--- a/src/style.scss
+++ b/src/style.scss
@@ -73,6 +73,7 @@
   @media screen and (min-width: 800px) {
     font-size: 3rem;
     margin-top: auto;
+    font-size: 2.5rem;
   }
 
   .logo-container {
@@ -86,7 +87,7 @@
       span {
         display: flex;
         @include roboto-bold;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
 
         @media screen and (min-width: 800px) {
           display: inline;
@@ -97,7 +98,7 @@
     .logo {
       height: 80px;
       width: auto;
-      margin-right: 2rem;
+      margin-right: 1rem;
     }
   }
 
@@ -164,13 +165,14 @@
   background-color: #FFF;
   display: flex;
   align-items: center;
-  margin: 5rem;
+  margin-right: 1rem;
 
   div:nth-child(1) {
     display: none;
 
     @media screen and (min-width: 800px) {
       display: block;
+      margin: 5rem;
     }
   }
 
@@ -213,7 +215,7 @@
 
 
   .room {
-    width: auto;
+    min-width: 400px;
     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
     height: auto;
     margin: 0 0rem 4rem 2rem;
