--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
   .header {
     font-size: 3rem;
     margin-top: auto;
+    font-size: 2.5rem;
   }
 }
 .header .logo-container {
@@ -38,7 +39,7 @@
   display: flex;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 @media screen and (min-width: 800px) {
   .header .logo-container h1 span {
@@ -48,7 +49,7 @@
 .header .logo-container .logo {
   height: 80px;
   width: auto;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 .header nav {
   display: none;
@@ -138,7 +139,7 @@
   background-color: #FFF;
   display: flex;
   align-items: center;
-  margin: 5rem;
+  margin-right: 1rem;
 }
 .review div:nth-child(1) {
   display: none;
@@ -146,6 +147,7 @@
 @media screen and (min-width: 800px) {
   .review div:nth-child(1) {
     display: block;
+    margin: 5rem;
   }
 }
 .review img {
@@ -187,7 +189,7 @@
   white-space: nowrap;
 }
 .popular-rooms .room {
-  width: auto;
+  min-width: 400px;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
   height: auto;
   margin: 0 0rem 4rem 2rem;
